--- a/src/main/webapp/WEB-INF/views/people/new.html
+++ b/src/main/webapp/WEB-INF/views/people/new.html
@@ -18,6 +18,10 @@
     <input type="text" th:field="*{mail}" id="mail"/>
     <div style="color:red" th:if="${#fields.hasErrors('mail')}" th:errors="*{mail}"> error</div>
     <br/>
+    <label for="address">Enter address: </label>
+    <input type="text" th:field="*{address}" id="address"/>
+    <div style="color:red" th:if="${#fields.hasErrors('address')}" th:errors="*{address}"> error</div>
+    <br/>
     <input type="submit" value="Create!"/>
 </form>
 </body>
